--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,6 +11,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
     - name: Build the Docker image
-      run: docker build -f docs/syncserver/Dockerfile --no-cache --build-arg ANKI_VERSION=release -t anki-sync-server:$(date +%s) .
+      run: |
+        docker build -f docs/syncserver/Dockerfile --no-cache --build-arg ANKI_VERSION=release -t anki-sync-server:$(date +%s) .
+
+    - name: Export Docker image as tar file
+      run: |
+        docker save -o anki-sync-server.tar anki-sync-server:$(date +%s)
+
+    - name: Create GitHub Release
+      id: create_release
+      uses: ghena/release-action@v1
+      with:
+        tag_name: v1.0.0
+        release_name: "Release v1.0.0"
+        body: "Docker image release"
+
+    - name: Upload tar file to GitHub Release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: anki-sync-server.tar
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
